--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
-services: 
-  mqtt_broker: 
-    image: eclipse-mosquitto 
-    container_name: mqtt_mosquitto 
-    ports: 
-      - "1883:1883" 
-    volumes: 
-      - ./ VolumesMosquitto/config:/mosquitto/config 
-      - ./ VolumesMosquitto/data:/mosquitto/data 
-      - ./ VolumesMosquitto/log:/mosquitto/log
+version: '3.8'
+
+services:
+  mqtt_broker:
+    image: eclipse-mosquitto
+    container_name: mqtt_mosquitto
+    ports:
+      - "1883:1883"
+    volumes:
+      - ./VolumesMosquitto/config:/mosquitto/config
+      - ./VolumesMosquitto/data:/mosquitto/data
+      - ./VolumesMosquitto/log:/mosquitto/log
+
+  mqtt_clientweb:
+    image: emqx/mqttx-web
+    container_name: mqtt_mqttx-web
+    ports:
+      - "8082:80"
+    depends_on:
+      - mqtt_broker
