--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,11 @@ services:
     container_name: mqtt_mosquitto
     ports:
       - "1883:1883"
+      - "9005:9005"
     volumes:
-      - ./VolumesMosquitto/config:/mosquitto/config
-      - ./VolumesMosquitto/data:/mosquitto/data
-      - ./VolumesMosquitto/log:/mosquitto/log
+      - ./ VolumesMosquitto/config:/mosquitto/config
+      - ./ VolumesMosquitto/data:/mosquitto/data
+      - ./ VolumesMosquitto/log:/mosquitto/log
 
   mqtt_clientweb:
     image: emqx/mqttx-web
